--- a/src/app/pages/rcm-login/patients/patients.component.html
+++ b/src/app/pages/rcm-login/patients/patients.component.html
@@ -564,14 +564,14 @@
 <!-- Dropdown Menu -->
 <mat-menu #sortMenu="matMenu">
   <div class="scrollable-menu">
-    <button mat-menu-item (click)="onSortOptionSelected('option1')">Option 1</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option2')">Option 2</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option3')">Option 3</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option4')">Option 4</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option5')">Option 5</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option6')">Option 6</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option7')">Option 7</button>
-    <button mat-menu-item (click)="onSortOptionSelected('option8')">Option 8</button>
+    <button mat-menu-item (click)="onSortOptionSelected('Patient ID')">Patient ID</button>
+    <button mat-menu-item (click)="onSortOptionSelected('Patient Name')">Patient Name</button>
+    <button mat-menu-item (click)="onSortOptionSelected('City')">City</button>
+    <button mat-menu-item (click)="onSortOptionSelected('State')">State</button>
+    <button mat-menu-item (click)="onSortOptionSelected('Zip Code')">Zip Code</button>
+    <button mat-menu-item (click)="onSortOptionSelected('Employment')">Employment</button>
+    <button mat-menu-item (click)="onSortOptionSelected('Cell Phone')">Cell Phone</button>
+    <button mat-menu-item (click)="onSortOptionSelected('	Email')">	Email</button>
   </div>
 </mat-menu>
 
