--- a/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
+++ b/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
@@ -74,7 +74,7 @@
                 <th>Role</th>
                 <th class="text-center">Users</th>
                 <th class="text-center">Special Permission</th>
-                <th class="text-center">Stutas Update</th>
+                <th class="text-center">Status Update</th>
                 <th class="text-center">Perspectives</th>
                 <th class="text-center">Horizon</th>
                 <th style="text-align: center !important;">Screen Permissions</th>
