--- a/src/app/pages/super-admin/admin-law-firm/admin-law-firm.component.html
+++ b/src/app/pages/super-admin/admin-law-firm/admin-law-firm.component.html
@@ -115,7 +115,7 @@
             <mat-card class="filter">
               <mat-card-content>
                 <div class="row col-sm-12">
-                  <div class="col-sm-4 row">
+                  <div class="col-sm-4">
                     <div class="col-sm-3" style="margin-top: 6px">
                       <b>Keyword:</b>
                     </div>
@@ -124,7 +124,7 @@
                     </div>
                   </div>
 
-                  <div class="col-sm-4 row">
+                  <div class="col-sm-4 ">
                     <div class="col-sm-3" style="margin-top: 6px">
                       <b>State:</b>
                     </div>
@@ -143,7 +143,7 @@
                       </mat-select>
                     </div>
                   </div>
-                  <div class="col-sm-4 row">
+                  <div class="col-sm-4 ">
                     <div class="col-sm-3" style="margin-top: 6px">
                       <b>City:</b>
                     </div>
@@ -163,11 +163,11 @@
                     </div>
                   </div>
 
-                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+                  
                 </div>
                 <div class="row col-sm-12" style="margin-top: 10px">
                   
-                  <div class="col-sm-4 row">
+                  <div class="col-sm-4 ">
                     <div class="col-sm-3" style="margin-top: 6px">
                       <b style="white-space: nowrap">Law Firm:</b>
                     </div>
@@ -187,7 +187,7 @@
                     </div>
                   </div>
 
-                  <div class="col-sm-4 row">
+                  <div class="col-sm-4 ">
                     <div class="col-sm-3" style="margin-top: 6px">
                       <b>Networks:</b>
                     </div>
