--- a/src/app/pages/super-admin/admin-setup/error-log/error-log.component.html
+++ b/src/app/pages/super-admin/admin-setup/error-log/error-log.component.html
@@ -161,7 +161,7 @@
                       <mat-card-content>
                           <div class="row col-sm-12">
                               <div class="col-sm-4 row">
-                                  <div class="col-sm-4 newMarginClass">
+                                  <div class="col-sm-4 newMarginClass" style="margin-top: 6px">
                                       <b>Keyword:</b>
                                   </div>
                                   <div class="col-sm-8">
