--- a/src/app/pages/super-admin/admin-setup/service-levels/service-levels.component.html
+++ b/src/app/pages/super-admin/admin-setup/service-levels/service-levels.component.html
@@ -142,8 +142,8 @@
                   <mat-card class="filter">
                       <mat-card-content>
                           <div class="row col-sm-12">
-                              <div class="col-sm-4 row">
-                                  <div class="col-sm-4 newMarginClass">
+                              <div class="col-sm-4 ">
+                                  <div class="col-sm-4 newMarginClass" style="margin-top: 6px">
                                       <b>Keyword:</b>
                                   </div>
                                   <div class="col-sm-8">
