--- a/src/app/pages/super-admin/admin-setup/staff-users/admin-roles/admin-roles.component.html
+++ b/src/app/pages/super-admin/admin-setup/staff-users/admin-roles/admin-roles.component.html
@@ -38,7 +38,7 @@
                 <mat-card-content>
                     <div class="row col-sm-12">
                         <div class="col-sm-4">
-                            <div class="col-sm-3 newMarginClass">
+                            <div class="col-sm-3 newMarginClass" style="margin-top: 6px">
                                 <b>Keyword:</b>
                             </div>
                             <div class="col-sm-9">
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="col-sm-4">
-                            <div class="col-sm-3 newMarginClass">
+                            <div class="col-sm-3 newMarginClass" style="margin-top: 6px">
                                 <b>Role:</b>
                             </div>
                             <div class="col-sm-8">
