--- a/src/app/pages/super-admin/admin-setup/staff-users/admin-userss/admin-userss.component.html
+++ b/src/app/pages/super-admin/admin-setup/staff-users/admin-userss/admin-userss.component.html
@@ -37,8 +37,8 @@
             <mat-card class="filter">
                 <mat-card-content>
                     <div class="row col-sm-12">
-                        <div class="col-sm-4 row">
-                            <div class="col-sm-3 newMarginClass">
+                        <div class="col-sm-4">
+                            <div class="col-sm-3 newMarginClass" style="margin-top: 6px">
                                 <b>Keyword:</b>
                             </div>
                             <div class="col-sm-9">
