--- a/src/app/pages/super-admin/rcm-accounts/networkdialog/networkdialog.component.html
+++ b/src/app/pages/super-admin/rcm-accounts/networkdialog/networkdialog.component.html
@@ -1,8 +1,5 @@
 <!--This page is used to add or edit accounts-->
-<h1
-  style="background-color: rgb(73, 128, 150); color: white; text-align: center"
-  mat-dialog-title
->
+<h1 style="background-color: rgb(73, 128, 150); color: white; text-align: center" mat-dialog-title>
   <span *ngIf="!account">Add</span><span *ngIf="account">Edit</span> Network
 </h1>
 
@@ -17,29 +14,15 @@
       <div class="col-sm-6">
         <div class="row" style="margin-bottom: 12px">
           <div class="col-sm-4 add-mem">
-            <label
-              class="control-label add-member-label required"
-              style="margin-left: 30px"
-              >Network :</label
-            >
+            <label class="control-label add-member-label required" style="margin-left: 30px">Network :</label>
           </div>
           <div class="col-sm-7">
             <mat-select class="form-control bac" placeholder="Select Network">
-              <mat-option [value]="'Tenet Healthcare'"
-                >Tenet Healthcare</mat-option
-              >
-              <mat-option [value]="'Baylor Scott & White Health'"
-                >Baylor Scott & White Health</mat-option
-              >
-              <mat-option [value]="'Steward Health Care System'"
-                >Steward Health Care System</mat-option
-              >
-              <mat-option [value]="'CHRISTUS Health'"
-                >CHRISTUS Health</mat-option
-              >
-              <mat-option [value]="'Oceans Healthcare'"
-                >Oceans Healthcare</mat-option
-              >
+              <mat-option [value]="'Tenet Healthcare'">Tenet Healthcare</mat-option>
+              <mat-option [value]="'Baylor Scott & White Health'">Baylor Scott & White Health</mat-option>
+              <mat-option [value]="'Steward Health Care System'">Steward Health Care System</mat-option>
+              <mat-option [value]="'CHRISTUS Health'">CHRISTUS Health</mat-option>
+              <mat-option [value]="'Oceans Healthcare'">Oceans Healthcare</mat-option>
               <mat-option [value]="'Nutex Health'">Nutex Health</mat-option>
             </mat-select>
           </div>
@@ -47,11 +30,7 @@
 
         <div class="row" style="margin-bottom: 12px">
           <div class="col-sm-4 add-mem">
-            <label
-              class="control-label add-member-label required"
-              style="margin-left: 30px"
-              >City :</label
-            >
+            <label class="control-label add-member-label required" style="margin-left: 30px">City :</label>
           </div>
           <div class="col-sm-7">
             <mat-select class="form-control bac" placeholder="Select City">
@@ -71,11 +50,7 @@
 
         <div class="row" style="margin-bottom: 12px">
           <div class="col-sm-4 add-mem">
-            <label
-              class="control-label add-member-label required"
-              style="margin-left: 30px"
-              >State :</label
-            >
+            <label class="control-label add-member-label required" style="margin-left: 30px">State :</label>
           </div>
           <div class="col-sm-7">
             <mat-select class="form-control bac" placeholder="Select State">
@@ -97,41 +72,21 @@
       <div class="col-sm-6">
         <div class="row" style="margin-bottom: 12px">
           <div class="col-sm-4 add-mem">
-            <label class="control-label add-member-label required"
-              >Zip Code :</label
-            >
+            <label class="control-label add-member-label required">Zip Code :</label>
           </div>
           <div class="col-sm-7">
-            <input
-              type="number"
-              class="form-control bac"
-              placeholder="Enter Zip Code"
-              maxlength="100"
-              minlength="2"
-              ondrag="return false"
-              ondrop="return false"
-              required
-            />
+            <input type="number" class="form-control bac" placeholder="Enter Zip Code" maxlength="100" minlength="2"
+              ondrag="return false" ondrop="return false" required />
           </div>
         </div>
 
         <div class="row" style="margin-bottom: 12px">
           <div class="col-sm-4 add-mem">
-            <label class="control-label add-member-label required"
-              >Cell Phone :</label
-            >
+            <label class="control-label add-member-label required">Cell Phone :</label>
           </div>
           <div class="col-sm-7">
-            <input
-              type="number"
-              class="form-control bac"
-              placeholder="Enter Cell Phone Number"
-              maxlength="100"
-              minlength="2"
-              ondrag="return false"
-              ondrop="return false"
-              required
-            />
+            <input type="number" class="form-control bac" placeholder="Enter Cell Phone Number" maxlength="100"
+              minlength="2" ondrag="return false" ondrop="return false" required />
           </div>
         </div>
       </div>
@@ -144,12 +99,8 @@
     <button mat-raised-button style="background-color: green; color: white">
       Proceed
     </button>
-    <button
-      mat-raised-button
-      class="add-dark-hover btn-default"
-      style="background-color: gray; color: red"
-      (click)="close()"
-    >
+    <button mat-raised-button class="add-dark-hover btn-default" style="background-color: gray; color: red"
+      (click)="close()">
       Cancel
     </button>
   </div>
