--- a/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.html
+++ b/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.html
@@ -117,34 +117,18 @@
         </div>
     </div>
     <div class="col-sm-6">
-        <mat-card style="height: auto; background-color: #fffce4;">
+        <mat-card style="height: auto; background-color: #d1d1d1;">
             <div class="row d-flex flex-wrap justify-content-center " style="padding: 30px;">
              
 
-                <button mat-raised-button style="width: 200px; height: 50px; margin: 10px;background-color: #2188bf;">Verified</button>
-                <button mat-raised-button style="width: 200px; height: 50px; margin: 10px;background-color: #2188bf;">Authorize</button>
-                <!-- <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 1}" (click)="toggleColor(1)">Scheduled</button>
-                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 2}" (click)="toggleColor(2)">Medical Records</button>
-                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 3}" (click)="toggleColor(3)">Claimed</button>
-                <button mat-raised-button class="custom-btn1" [ngClass]="{'white-btn1': isClicked1}" (click)="toggleColor1()">Funded</button>
-                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 4}" (click)="toggleColor(4)">Settled</button>
-                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 5}" (click)="toggleColor(5)">Paid</button>
-                 -->
-<!-- 
-                 <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 1}" (click)="nextStep(1)">Scheduled</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 2}" (click)="nextStep(2)">Medical Records</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 3}" (click)="nextStep(3)">Claimed</button>
-<button mat-raised-button class="custom-btn1" [ngClass]="{'white-btn1': isClicked === 4}" (click)="nextStep(4)">Funded</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 5}" (click)="nextStep(5)">Settled</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 6}" (click)="nextStep(6)">Paid</button> -->
-
-
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 1}" [disabled]="clickedButtons[1]" (click)="nextStep(1)">Scheduled</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 2}" [disabled]="clickedButtons[2]" (click)="nextStep(2)">Medical Records</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 3}" [disabled]="clickedButtons[3]" (click)="nextStep(3)">Claimed</button>
-<button mat-raised-button class="custom-btn1" [ngClass]="{'white-btn1': isClicked === 4}" [disabled]="clickedButtons[4]" (click)="nextStep(4)">Funded</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 5}" [disabled]="clickedButtons[5]" (click)="nextStep(5)">Settled</button>
-<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 6}" [disabled]="clickedButtons[6]" (click)="nextStep(6)">Paid</button>
+                <button mat-raised-button disabled class="custom-btn " style="background-color: #ffffff;">Scheduled</button>
+                <button mat-raised-button disabled class="custom-btn" style="background-color: #ffffff;">Medical Records</button>
+                <button mat-raised-button disabled class="custom-btn " style="background-color: #ffffff;">Scheduled</button>
+                <button mat-raised-button disabled class="custom-btn" style="background-color: #ffffff;">Medical Records</button>
+                <button mat-raised-button disabled class="custom-btn " style="background-color: #ffffff;">Claimed</button>
+                <button mat-raised-button disabled class="custom-btn " style="background-color: #ffffff;">Funded</button>
+                <button mat-raised-button disabled class="custom-btn " style="background-color: #ffffff;">Settled</button>
+                <button mat-raised-button disabled class="custom-btn " style="background-color: #ffffff;">Paid</button>
 
 
 
