--- a/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.scss
+++ b/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.scss
@@ -38,4 +38,42 @@
   }
 
   
+  .custom-btn1 {
+    width: 200px;
+    height: 50px;
+    margin: 10px;
+    background-color: white;
+    color: black;
+    border: 2px solid white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .custom-btn1.white-btn1 {
+    background-color: gray;
+    color: white;
+    border: 2px solid gray;
+  }
+  
 
+
+
+  button {
+    width: 200px;
+    height: 50px;
+    margin: 10px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .active-btn {
+    background-color: #2188bf !important;
+    color: white;
+  }
+  
+  .inactive-btn {
+    background-color: gray !important;
+    color: rgb(255, 255, 255);
+  }
+  
